# Music-Player-Py

./: README.md  pyproject.toml
.github/workflows/: aab-build.yml  apk-build.yml  linux-build.yml
src/: main.py
